# Blog-autogen

./: .env.example  .gitignore  README.md  blog-autogen-runner  main.py  prompts.txt  pyproject.toml  requirements.txt  setup.bat  setup.sh
blog_autogen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/: config_manager.py  job_runner.py  language.py  orchestrator.py  run_options.py  scheduler.py  scheduler_service.py  telegram_commands.py  telegram_service.py
docs/superpowers/plans/: 2026-04-27-google-sheets-telegram-integration.md  2026-04-27-story-autogen-impl.md  2026-04-27-wp-publisher-implementation.md  2026-05-03-facebook-page-final-step-implementation.md  2026-05-03-image-generation-toggle.md  2026-05-03-safe-artifact-cleanup-implementation.md  2026-05-03-telegram-run-and-config-scheduler.md  2026-05-04-telegram-run-step-progress.md
docs/superpowers/specs/: 2026-04-27-google-sheets-telegram-integration.md  2026-04-27-story-autogen-design.md  2026-04-27-wp-publisher-impl.md  2026-05-03-facebook-final-step-design.md  2026-05-03-safe-artifact-cleanup-design.md  (+1 more)
providers/: ai_9router.py  base_ai.py  google_sheets.py  storage.py
publishers/: base_pub.py  facebook_page.py  wp_rest.py
tests/: test_ai_9router.py  test_config_manager.py  test_facebook_page.py  test_integrations.py  test_job_runner.py  test_main.py  test_orchestrator.py  test_run_options.py  test_scheduler.py  test_scheduler_service.py  test_telegram_commands.py  test_telegram_service.py  test_wp_rest.py
utils/: helpers.py
