[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blog-autogen"
version = "1.0.0"
description = "AI-powered blog and story automation tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "httpx",
    "pyyaml",
    "questionary",
    "gspread",
    "google-auth",
    "python-telegram-bot",
    "tqdm",
]

[tool.setuptools]
packages = ["core", "providers", "publishers", "utils"]
py-modules = ["main"]

[project.scripts]
blog-autogen = "main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]
